tests/ui/type_call_arg_mismatch.ql
fn add(left: Int, right: Int) -> Int {
    return left + right
}

fn main() -> Int {
    return add(1, "x")
}
